# resume-parser

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  test_lambda.py
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .vercelignore  Dockerfile  Pipfile  VERSION_REQUIREMENTS.md  alembic.ini  index.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-full.txt  requirements.txt  validate_structure.py  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 20260221_initial_schema.py
backend/api/: index.py
backend/app/: __init__.py  main.py
backend/app.egg-info/: SOURCES.txt
backend/app/api/: __init__.py  resumes.py  shares.py  websocket.py
backend/app/core/: __init__.py  config.py  database.py  share_storage.py  storage.py
backend/app/models/: __init__.py  progress.py  resume.py
backend/app/services/: __init__.py  ai_extractor.py  database_share_storage.py  database_storage.py  export_service.py  nlp_extractor.py  ocr_extractor.py  parser_orchestrator.py  storage_adapter.py  text_extractor.py
backend/scripts/: encode_password.py  init_database.sh
backend/supabase/.temp/: pooler-url  project-ref
backend/tests/: conftest.py  test_mangum_version.py
backend/tests/e2e/: test_processing_flow.py  test_share_flow.py
backend/tests/integration/: conftest.py  test_alembic_setup.py  test_api_exports.py  test_api_resumes.py  test_api_resumes_get.py  test_api_shares.py  test_database.py  test_database_api_integration.py  test_database_share_storage.py  test_health_check.py  test_ocr_flow.py  test_spacy_python312_compatibility.py  test_upload_metadata.py  test_websocket.py  test_websocket_connection_cleanup.py  test_websocket_flow.py
backend/tests/unit/: test_ai_extractor.py  test_database_storage.py  test_lazy_database.py  test_models.py  test_nlp_extractor.py  test_ocr_extractor.py  test_parser_orchestrator.py  test_parser_orchestrator_ai.py  test_progress.py  test_share_storage.py  test_storage_adapter.py  test_text_extractor.py  test_uuid_generation.py  test_vercel_config.py
docs/: BUG-FIX-16-VERCEL-SCHEMA.md  BUG-FIX-17-VERCEL-RUNTIME-ERROR.md  BUG-FIX-17b-PEP-668-COMPLIANCE.md  BUG-FIX-18-LAZY-DATABASE-INITIALIZATION.md  BUG-FIX-19-PYTHON-312-SPACY-COMPATIBILITY.md  BUG-FIX-20-PYDANTIC-V2-SPACY-COMPATIBILITY.md  BUG-FIX-21-PYTHON-312-4-PYDANTIC-274-COMPATIBILITY.md  BUG-FIX-22-MANGUM-021-PYTHON312-COMPATIBILITY.md  BUG-FIX-23-VERCEL-RUNTIME-CACHE.md  BUG-FIX-24-OPTIMIZE-BUNDLE-SIZE.md  DATABASE_SETUP.md  DEBUGGING-INDEX.md  DEBUGGING-SESSION-2026-02-21-FIXES.md  DEBUGGING-SESSION-2026-02-22-SHARE-EXPORT-FIXES.md  DEBUGGING-SESSION-SUMMARY-2026-02-24.md  DEPLOYMENT-QUICK-START.md  DEPLOYMENT-SOLUTION.md  DEPLOYMENT-TROUBLESHOOTING.md  PLATFORM-MIGRATION-COMPLETE.md  PROGRESS.md  STEP-1-COMPLETE.md  SUPABASE_SETUP.md  VERCEL-DEPLOYMENT-FIX.md  VERCEL-DEPLOYMENT-GUIDE.md  VERCEL-FINAL-FIX.md  VERCEL-FIX-INSTRUCTIONS.md
docs/plans/: 2026-02-19-ai-enhancement-design.md  2026-02-19-ai-enhancement-implementation.md  2026-02-19-processing-page-implementation.md  2026-02-19-resumate-design.md  2026-02-19-resumate-implementation.md  2026-02-19-share-page-design.md  2026-02-19-share-page-implementation.md  2026-02-21-platform-update-renders-flyio.md  2026-02-21-tasks-34-40-implementation-plan.md  INDEX.md
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/src/: App.test.tsx  App.tsx  AppRoutes.tsx  index.css
frontend/src/components/: ExportButtons.tsx  FileUpload.tsx  ProcessingStage.tsx  ShareLinkCard.tsx  ShareSettings.tsx
frontend/src/components/__tests__/: ProcessingStage.test.tsx
frontend/src/hooks/: index.ts  useWebSocket.ts
frontend/src/hooks/__tests__/: useWebSocket.test.ts
frontend/src/pages/: ProcessingPage.tsx  PublicSharedResumePage.tsx  ReviewPage.tsx  ShareManagementPage.tsx  SharePage.tsx  UploadPage.tsx
frontend/src/pages/__tests__/: ProcessingPage.test.tsx  PublicSharedResumePage.test.tsx  ReviewPage.test.tsx  ShareManagementPage.test.tsx  SharePage.test.tsx
frontend/src/services/: api.ts
frontend/src/test/: types.ts
frontend/src/types/: index.ts
frontend/tests/unit/: deployment-config.test.ts
