[project]
name = "resumate-backend"
version = "1.0.0"
description = "AI-Powered Resume Parser Backend"
requires-python = ">=3.11"
dependencies = [
    # Dependencies are managed in requirements.txt
    # This minimal pyproject.toml exists to satisfy Vercel's uv lock requirement
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = 'py311'
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
