[project]
name = "resumate-backend"
version = "1.0.0"
description = "AI-Powered Resume Parser Backend"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and server
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "mangum==0.17.0",
    # Database
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "psycopg>=3.0.0",
    "alembic==1.13.1",
    # OCR and Document Processing
    "pdfplumber==0.10.3",
    "PyPDF2==3.0.1",
    "python-docx==1.1.0",
    "pytesseract==0.3.10",
    "Pillow==10.2.0",
    "pdf2image==1.16.3",
    # NLP and AI
    "spacy==3.7.2",
    "openai==1.10.0",
    # Task Queue
    "celery==5.3.6",
    "redis==5.0.1",
    # Security and Validation
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    # Storage
    "boto3==1.34.23",
    # Utilities
    "aiofiles==23.2.1",
    "httpx==0.26.0",
    # Monitoring
    "sentry-sdk==1.40.0",
    # PDF Generation
    "reportlab==4.0.7",
]

[dependency-groups]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "ruff==0.1.14",
    "mypy==1.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = 'py311'
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
