[project]
name = "resumate-backend"
version = "1.0.0"
description = "AI-Powered Resume Parser Backend"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and server
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "mangum>=0.21.0,<1.0.0",
    # Database
    "sqlalchemy==2.0.25",
    "asyncpg>=0.30.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    # OCR and Document Processing (OCR removed - not compatible with Lambda)
    "pdfplumber==0.10.3",
    "PyPDF2==3.0.1",
    "python-docx==1.1.0",
    # "pytesseract==0.3.10",  # REMOVED: Requires tesseract binary unavailable on Lambda
    "Pillow>=10.4.0",
    # "pdf2image==1.16.3",  # REMOVED: Requires poppler binary unavailable on Lambda
    # NLP and AI (spaCy 3.8+ required for Python 3.12 compatibility)
    "spacy>=3.8.0,<4.0.0",
    # CRITICAL: confection>=0.1.4 enables Pydantic v2 support for spaCy
    "confection>=0.1.4,<1.0.0",
    # CRITICAL: thinc>=8.3.4 required for spaCy + Pydantic v2 compatibility
    "thinc>=8.3.4,<9.0.0",
    "openai==1.10.0",
    # Task Queue
    # REMOVED 2026-02-24: Not used in codebase (~42 MB savings)
    # "celery==5.3.6",
    # "redis==5.0.1",
    # Security and Validation
    # CRITICAL: pydantic>=2.7.4 required for Python 3.12.4 compatibility (recursive_guard fix)
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    # Storage
    "boto3==1.34.23",
    # Utilities
    "aiofiles==23.2.1",
    "httpx==0.26.0",
    # Monitoring
    # REMOVED 2026-02-24: Not initialized in codebase (~12 MB savings)
    # "sentry-sdk==1.40.0",
    # PDF Generation
    "reportlab==4.0.7",
]

[dependency-groups]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "ruff==0.1.14",
    "mypy==1.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "api"]

[tool.setuptools.package-data]
"*" = ["*.py", "py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = 'py311'
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
